--- a/darts/templates/darts/registration.html
+++ b/darts/templates/darts/registration.html
@@ -1,29 +1,109 @@
 {% extends "darts/base.html" %}
+{% load static %}
+
+{% block title %}Darts Make{% endblock %}
+{% block css %}
+    <link rel="stylesheet"  type = "text/css" href="{% static 'darts/registration.css' %}">
+
+{% endblock %}
 {% block content %}
-<form action="" method="POST">
-    <div class="col-md-6 offset-md-3">
-        <div class="card">
-            <div class="card-body">
-                <form action="{% url 'darts:login' %}" method="POST">
-                    {{ form.non_field_errors }}
-                    {% for field in form %}
-                        {{ field }}
-                        {{ field.errors }}
-                        <hr>
-                    {% endfor %}
-                    <button type="submit" class="btn btn-success btn-lg btn-block" >ログイン</button>
-                    <input type="hidden" name="next" value="{{ next }}" />
-                    {% csrf_token %}
-            </div>
-        </div>
-    </div>
-</form>
-<h1>a</h1>
-    <p>a
-    </p>
- <div class="card col-md-6">
-     <div class="card-body">
-         <a href="{% url 'darts:user_create' %}" class="btn btn-success btn-lg btn-block" >会員登録</a>
-     </div>
- </div>
+
+      <div class="map">
+        <ul class="jp_map">
+      <li>
+        <a href="#">北海道</a></li>
+      <li>
+        <a href="#">青森県</a></li>
+      <li>
+        <a href="#">岩手県</a></li>
+      <li>
+        <a href="#">宮城県</a></li>
+      <li>
+        <a href="#">秋田県</a></li>
+      <li>
+        <a href="#">山形県</a></li>
+      <li>
+        <a href="#">福島県</a></li>
+      <li>
+        <a href="#">茨城県</a></li>
+      <li>
+        <a href="#">栃木県</a></li>
+      <li>
+        <a href="#">群馬県</a></li>
+      <li>
+        <a href="#">埼玉県</a></li>
+      <li>
+        <a href="#">千葉県</a></li>
+      <li>
+        <a href="#">東京都</a></li>
+      <li>
+        <a href="#">神奈川県</a></li>
+      <li>
+        <a href="#">新潟県</a></li>
+      <li>
+        <a href="#">富山県</a></li>
+      <li>
+        <a href="#">石川県</a></li>
+      <li>
+        <a href="#">福井県</a></li>
+      <li>
+        <a href="#">山梨県</a></li>
+      <li>
+        <a href="#">長野県</a></li>
+      <li>
+        <a href="#">岐阜県</a></li>
+      <li>
+        <a href="#">静岡県</a></li>
+      <li>
+        <a href="#">愛知県</a></li>
+      <li>
+        <a href="#">三重県</a></li>
+      <li>
+        <a href="#">滋賀県</a></li>
+      <li>
+        <a href="#">京都府</a></li>
+      <li>
+        <a href="#">大阪府</a></li>
+      <li>
+        <a href="#">兵庫県</a></li>
+      <li>
+        <a href="#">奈良県</a></li>
+      <li>
+        <a href="#">和歌山県</a></li>
+      <li>
+        <a href="#">鳥取県</a></liÓ
+      <li>
+        <a href="#">島根県</a></li>
+      <li>
+        <a href="#">岡山県</a></li>
+      <li>
+        <a href="#">広島県</a></li>
+      <li>
+        <a href="#">山口県</a></li>
+      <li>
+        <a href="#">徳島県</a></li>
+      <li>
+        <a href="#">香川県</a></li>
+      <li>
+        <a href="#">愛媛県</a></li>
+      <li>
+        <a href="#">高知県</a></li>
+      <li>
+        <a href="#">福岡県</a></li>
+      <li>
+        <a href="#">佐賀県</a></li>
+      <li>
+        <a href="#">長崎県</a></li>
+      <li>
+        <a href="#">熊本県</a></li>
+      <li>
+        <a href="#">大分県</a></li>
+      <li>
+        <a href="#">宮崎県</a></li>
+      <li>
+        <a href="#">鹿児島県</a></li>
+      <li>
+        <a href="#">沖縄県</a></li>
+    </ul>
+      </div>
 {% endblock %}
