--- a/darts/templates/darts/service.html
+++ b/darts/templates/darts/service.html
@@ -1,5 +1,5 @@
 {% extends 'darts/base.html' %}
-{#間に入れないと動かない#}
+
 {% load static %}
 
 {% block title %}Darts Make{% endblock %}
@@ -8,8 +8,8 @@
 
 {% block content %}
 
-
-    <div class="top">
+<div class="service">
+    <div class="servicetop">
       <h1 id= "use_1">Darts Markとは</h1>
       <p>・ダーツを通して色んな人と出会い、繋がることを目指したサイトです。</p>
       <p>・お互いに評価し合うことで初めて合う人でも心配ありません。</p>
@@ -22,6 +22,6 @@
       <p>・地域を設定をしましょう。</p>
       <p>・友達を募集か参加し連絡を取り合いましょう。</p>
       <p>・終わったらお互いを評価してください。次の出会いに繋がります。</p>
-
     </div>
+</div>
 {% endblock %}
