--- a/darts/templates/chat/chat.html
+++ b/darts/templates/chat/chat.html
@@ -1,6 +1,6 @@
 
-{% extends 'darts/base.html' %}
-
+{% extends 'darts/little_base.html' %}
+coding:UTF-8
 {% load static %}
 
 {% block title %}chat{% endblock %}
@@ -8,6 +8,9 @@
 
 {% block content %}
 <br><br><br><br><br><br>
+<div class="card">
+
+
     どのチャットルームに入力しますか？<br/>
     <input id="room-name-input" type="text" size="100"/><br/>
     <input id="room-name-submit" type="button" value="Enter"/>
@@ -28,8 +31,8 @@
         };
     </script>
 
+</div>
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 
