--- a/darts/templates/darts/login.html
+++ b/darts/templates/darts/login.html
@@ -1,4 +1,4 @@
-{% extends "darts/base.html" %}
+{% extends "darts/little_base.html" %}
 {% block content %}
 <br><br><br><br><br><br>
 <form action="" method="POST">
@@ -18,5 +18,7 @@
             </div>
         </div>
     </div>
-<br><br><br><br><br><br><br>
+
+
+
 {% endblock %}
