--- a/darts/templates/darts/top.html
+++ b/darts/templates/darts/top.html
@@ -13,7 +13,7 @@
         <h1>Make A New Friends</h1>
         <a href="{% url 'darts:registration' %}" class = "request">募集する</a>
 
-        <a href="{% url 'darts:chat' %}" class = "find">見つける</a>
+        <a href="{% url 'darts:chat' %}" class = "find">チャット</a>
         <a href="#" class = "bbs">掲示板</a>
       </div>
 
