--- a/darts/templates/darts/user_create_complete.html
+++ b/darts/templates/darts/user_create_complete.html
@@ -1,5 +1,7 @@
-{% extends "darts/base.html" %}
+{% extends "darts/little_base.html" %}
 {% block content %}
+
+<br><br><br><br>
 <p>
     本登録が完了しました。<br>
     登録されたメールアドレスとパスワードでログインしてください。<br>
