--- a/darts/templates/darts/user_create_done.html
+++ b/darts/templates/darts/user_create_done.html
@@ -1,5 +1,6 @@
-{% extends "darts/base.html" %}
+{% extends "darts/little_base.html" %}
 {% block content %}
+<br><br><br><br>
 <p>
     会員登録確認メールを送信しました。まだ、会員登録は完了していません。<br>
     確認メールを送信しましたので、確認メールに記載されているリンクから本登録を行ってください。
